--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "private": "false",
   "name": "fcc-react-modules",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "FCC.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
